# disk-duel

./: .gitignore  README.md  disk_duel.py
web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
web/alembic/: env.py
web/alembic/versions/: 8560a5ee1c83_initial_schema.py
web/app/: config.py  db.py  main.py  models.py  schemas.py  slugs.py
web/app/routers/: api.py  pages.py
web/app/static/: charts.js  site.js  styles.css  thermal.js
web/app/templates/: about.html  base.html  browse.html  drive.html  home.html  machine.html  run.html
web/sql/: 01_bootstrap.sql
