[project]
name = "disk-duel-web"
version = "0.1.0"
description = "Public results portal for Disk Duel benchmarks"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.4",
    "jinja2>=3.1",
    "alembic>=1.13",
    "hashids>=1.3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
